--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
-    "@types/react": "^17.0.20",
+    "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.9",
+    "@types/styled-components": "^5.1.24",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0",
-    "@types/styled-components": "^5.1.24",
     "styled-components": "^5.3.5",
-    "styled-icons": "^10.45.0"
+    "styled-icons": "^10.45.0",
+    "typescript": "^4.4.2",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
